- function argument hinting in the console
- tab completion of R symbol names in the console
- added R function rk.edit (x) to open object x for editing in rkward
- fixed: an empty table created before the object list was updated (esp. at startup) would be thought to have been removed in the workspace
- object data changed in the console (or by other means) is updated to the editor automatically, if the object is opened for editing
- fixed: back / forward buttons would sometimes remain after closing a help window
- fix some focus problems
- provide close buttons in tab bar

--- Version 0.4.0 - Oct-17-2006
- many new distribution plugins
- all distribution plugins now use a free-text field, allowing you to enter a vector of probabilties / quantiles
- another fix to cancelling during readline () calls
- invalid values are stored in a separate attribute instead of changing the storage mode back and forth
- storage mode for RKWard meta data was changed
- RMB option to search help on objects from packages in object browser
- show tooltip information on objects in object browser
- do not crash on call to "browser ()"
- the object browser is updated automatically when needed
- allow some more configuration in object browser
- include all package environments in object list
- use more efficient data passing to synchronize object list
- add (ugly) items for functions and lists to object browser
- internal cleanups (partially to make porting to KDE4/Qt4 easier)
- when saving/loading the workspace, save / restore all windows (not just data editors)
- remember workspace url after save as
- fix a long standing (but hard to trigger) crash while closing data editor window
- fix "Open R Script File" filename ending filter
- add mismatching brace detection to syntax highlighting
- yet another crash on more than 100 rows bug fixed
- RKWard should now be fully UTF-8 aware. All characters are passed to and from R reliably

--- Version 0.3.7 - Sep-17-2006
- added Turkish translation