@@ -1,3 +1,4 @@
+- as you type completion of R symbol names in the script editor
 - function argument hinting in the console
 - tab completion of R symbol names in the console
 - added R function rk.edit (x) to open object x for editing in rkward
